--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>CityRide Cab Services</title>
+  <title>Shama Cab Tours And Travels</title>
 
   <style>
     body {
@@ -80,8 +80,8 @@
 <body>
 
 <header>
-  <h1>CityRide Cab Services</h1>
-  <p>Driver Included • Local • Outstation • Airport</p>
+  <h1>Shama Cab Tours And Travels</h1>
+  <p>Rent a Car | Driver Included • Local • Outstation • Airport</p>
 </header>
 
 <div class="container">
