added bus and tempo tab

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
   <section id="home" class="hero">
     <div class="hero-content">
       <h3>Cab Service</h3>
-      <h4>Pickup & Drop • Round Trip • Airport Transfers</h4>
+      <h4> • Pickup & Drop • Round Trip • Airport Transfers</h4>
 
       <div class="hero-buttons">
         <a href="tel:+919989083765" class="btn primary">📞 Call Now</a>
@@ -57,25 +57,10 @@
 
     <!-- Tabs -->
     <div class="tabs">
-      <button class="tab active" onclick="showCars('hatchback')">Hatchback</button>
-      <button class="tab" onclick="showCars('sedan')">Sedan</button>
+      <button class="tab active" onclick="showCars('sedan')">Sedan</button>
       <button class="tab" onclick="showCars('suv')">SUV</button>
-    </div>
-
-    <!-- Hatchback -->
-    <div class="slider active" id="hatchback">
-      <div class="slides">
-        <div class="car-card">
-          <img src="images/hatchback.jpg">
-          <h3>Swift</h3>
-          <p>₹10 / km</p>
-        </div>
-        <div class="car-card">
-          <img src="images/38335.jpg">
-          <h3>i10</h3>
-          <p>₹10 / km</p>
-        </div>
-      </div>
+      <button class="tab" onclick="showCars('bus')">Bus</button>
+      <button class="tab" onclick="showCars('tempo')">Tempo Traveller</button>
     </div>
 
     <!-- Sedan -->
@@ -91,6 +76,21 @@
           <h3>Etios</h3>
           <p>₹12 / km</p>
         </div>
+        <div class="car-card">
+          <img src="images/sedan/2.jpg">
+          <h3>Dzire</h3>
+          <p>₹12 / km</p>
+        </div>
+        <div class="car-card">
+          <img src="images/sedan/1.jpg">
+          <h3>Etios</h3>
+          <p>₹12 / km</p>
+        </div>
+        <div class="car-card">
+          <img src="images/sedan/2.jpg">
+          <h3>Dzire</h3>
+          <p>₹12 / km</p>
+        </div>
       </div>
     </div>
 
@@ -104,6 +104,53 @@
         </div>
         <div class="car-card">
           <img src="images/innova.jpg">
+          <h3>Innova</h3>
+          <p>₹16 / km</p>
+        </div>
+        <div class="car-card">
+          <img src="images/luxury.jpg">
+          <h3>Ertiga</h3>
+          <p>₹16 / km</p>
+        </div>
+        <div class="car-card">
+          <img src="images/innova.jpg">
+          <h3>Innova</h3>
+          <p>₹16 / km</p>
+        </div>
+      </div>
+    </div>
+
+    <!-- Bus -->
+    <div class="slider" id="bus">
+      <div class="slides">
+        <div class="car-card">
+          <img src="images/bus1.avif">
+          <h3>Ertiga</h3>
+          <p>₹16 / km</p>
+        </div>
+        <div class="car-card">
+          <img src="images/bus2.webp">
+          <h3>Innova</h3>
+          <p>₹16 / km</p>
+        </div>
+        <div class="car-card">
+          <img src="images/bus3.webp">
+          <h3>Innova</h3>
+          <p>₹16 / km</p>
+        </div>
+      </div>
+    </div>
+
+    <!-- Tempo Traveller -->
+    <div class="slider" id="tempo">
+      <div class="slides">
+        <div class="car-card">
+          <img src="images/tempo1.avif">
+          <h3>Ertiga</h3>
+          <p>₹16 / km</p>
+        </div>
+        <div class="car-card">
+          <img src="images/tempo2.webp">
           <h3>Innova</h3>
           <p>₹16 / km</p>
         </div>
