added bus and tempo tab

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
     </div>
 
     <!-- Sedan -->
-    <div class="slider" id="sedan">
+    <div class="slider active" id="sedan">
       <div class="slides">
         <div class="car-card">
           <img src="images/sedan/2.jpg">
@@ -165,7 +165,7 @@
 
     <div class="calculator">
       <select id="carType">
-        <option value="10">Hatchback – ₹10/km</option>
+        <option value="10">Bus – ₹30/km</option>
         <option value="12">Sedan – ₹12/km</option>
         <option value="16">SUV – ₹16/km</option>
       </select>
